fix tests after restructure